# mff-discrete

./: Cargo.toml  config.json
src/: config.rs  main.rs
src/discrete_system/: address.rs  component.rs  effector.rs  mod.rs
src/park/: carousel.rs  customer.rs  customer_dispatcher.rs  mod.rs
