[package]
name = "untitled7"
version = "0.1.0"
authors = ["Vojtěch Hotmar <vojtech.hotmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
colored = "1.8.0"
serde_json = "1.0.39"
serde = { version = "1.0.92", features = ["derive"] }
rocket = "0.4.1"
rocket_contrib = { version = "0.4.1", features = ["json"] }
rocket_cors = "0.5.0"